tests/ui/non-ascii.rs
use bash_builtins::BuiltinOptions;

#[derive(BuiltinOptions)]
enum Opt {
    #[opt = 'Ω']
    Ω
}

fn main() {}
